Remove explicit dark mode option and minor fixes

--- a/chromium/pages/options/style.css
+++ b/chromium/pages/options/style.css
@@ -3,37 +3,48 @@ body{
   display: block;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background: rgb(41,42,45);
+    color: rgb(232, 234, 237);
+  }
+
+  .section-header-span {
+    color: black;
+  }
+
+  .section-header-span.active {
+    background-color: rgb(50, 54, 57);
+  }
+
+  .section-header-span.inactive {
+    background-color: rgb(32, 33, 36);
+  }
+
+  div#update-channels-warning {
+    background-color: rgb(51, 134, 204);
+    color: black;
+  }
+}
+
 a.settings{
-	background-color: #1c87c9;
-	border: none;
-	color: white;
-	padding: 20px 34px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 20px;
-	margin: 4px 2px;
+  background-color: #1c87c9;
+  border: none;
+  color: white;
+  padding: 20px 34px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
 }
 
-body.dark{
-  background: rgb(41,42,45);
-  color: rgb(232, 234, 237);
+#general-settings-wrapper {
+  margin: 10px 0px 20px 0px;
 }
 
-label.dark, p.dark {
-  color: rgb(232, 234, 237);
-}
-
-.settings-wrapper{
-  margin: 10px 0 0 0;
-}
-
-.settings-wrapper#update-wrapper{
-  margin-bottom: 20px;
-}
-
-.settings-wrapper#show-devtools-tab-wrapper{
-  margin-bottom: 20px;
+.settings-wrapper {
+  margin-bottom: 10px;
 }
 
 /** User rules Option**/
@@ -106,16 +117,8 @@ img.remove{
   background-color: #66ccff;
 }
 
-.section-header-span.active.dark{
-  background-color: rgb(50, 54, 57);
-}
-
 .section-header-span.inactive{
   background-color: #ddd;
-}
-
-.section-header-span.inactive.dark{
-  background-color: rgb(32, 33, 36);
 }
 
 .update-channel{
@@ -201,10 +204,6 @@ div#update-channels-error {
 div#update-channels-warning {
   background-color: #FFCC00;
   font-color: black;
-}
-
-div#update-channels-warning.dark {
-  background-color: rgb(51, 134, 204);
 }
 
 #update-channels-error-text{
